<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tv_puntos_cardinales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/info_puntos_cardinales"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/sp_puntos_cardinales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_puntos_cardinales"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:prompt="@string/puntos_cardinales_prompt" />

    <Button
        android:id="@+id/bt_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp_puntos_cardinales"
        android:layout_centerHorizontal="true"
        android:onClick="botonBuscarActividadBrujula"
        android:text="@string/boton_buscar" />

</RelativeLayout>